[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/ball_launcher/ball_launcher.gd" type="Script" id=1]
[ext_resource path="res://game/ball_launcher/ball_launcher.png" type="Texture" id=2]
[ext_resource path="res://game/ball/ball.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 64, 32 )

[node name="BallLauncher" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LaunchPosition" type="Position2D" parent="."]
position = Vector2( 0, 46 )

[node name="LaunchTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "ball" ), [ ExtResource( 3 ) ] ]

[connection signal="timeout" from="LaunchTimer" to="." method="_on_launch_timer_timeout"]
